--- a/uwrt_mars_rover_msgs/CMakeLists.txt
+++ b/uwrt_mars_rover_msgs/CMakeLists.txt
@@ -49,8 +49,9 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
   FILES
   NeopixelArrayMode.msg
-  OpenLoopVelCmd.msg
+  UWRTDiffDriveVelCmd.msg
   Vector3.msg
+  UWRTRoverPosCmd.msg
 )
 
 ## Generate services in the 'srv' folder
