--- a/uwrt_mars_rover_pid_api/CMakeLists.txt
+++ b/uwrt_mars_rover_pid_api/CMakeLists.txt
@@ -2,8 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(uwrt_mars_rover_pid_api)
 
 ## Find catkin macros and libraries
-find_package(catkin REQUIRED
-        COMPONENTS
+find_package(catkin REQUIRED COMPONENTS
         message_generation
         roscpp
         uwrt_mars_rover_msgs
