--- a/uwrt_mars_rover_pid_api/package.xml
+++ b/uwrt_mars_rover_pid_api/package.xml
@@ -4,7 +4,7 @@
     <version>0.0.0</version>
     <description>pidApi</description>
 
-    <maintainer email="younesreda1@outlook.com">yreda1999</maintainer>
+    <maintainer email="younesreda1@outlook.com">younesreda1</maintainer>
 
     <license>MIT</license>
 
