--- a/uwrt_arm/uwrt_arm_msgs/CMakeLists.txt
+++ b/uwrt_arm/uwrt_arm_msgs/CMakeLists.txt
@@ -11,6 +11,9 @@ find_package(catkin REQUIRED
 add_message_files(
   FILES
     UWRTArmCommand.msg
+    UWRTArmTwist.msg
+    Twist.msg
+    Vector3.msg
 )
 
 generate_messages(DEPENDENCIES std_msgs)
