--- a/uwrt_arm/uwrt_arm/package.xml
+++ b/uwrt_arm/uwrt_arm/package.xml
@@ -15,6 +15,7 @@
   <exec_depend>uwrt_arm_hw</exec_depend>
   <exec_depend>uwrt_arm_moveit_config</exec_depend>
   <exec_depend>uwrt_arm_msgs</exec_depend>
+  <exec_depend>uwrt_arm_controllers</exec_depend>
 
   <export>
     <metapackage/>
