--- a/uwrt_arm/uwrt_arm_control/config/ros_controllers.yaml
+++ b/uwrt_arm/uwrt_arm_control/config/ros_controllers.yaml
@@ -24,6 +24,9 @@ joint_state_controller:
 
 controller_list: []  # Not sure why this is required
 
+arm_cartesian_controller:
+  type: uwrt_cartesian_controller/CartesianController
+
 arm_trajectory_controller:
   type: position_controllers/JointTrajectoryController
   joints:
