--- a/uwrt_arm/uwrt_arm_control/config/ros_controllers.yaml
+++ b/uwrt_arm/uwrt_arm_control/config/ros_controllers.yaml
@@ -12,6 +12,7 @@ hardware_interface:
   joints:
     - arm_base_turntable_joint
     - arm_shoulder_joint
+    - arm_shoulder_bicep_joint
     - arm_elbow_joint
     - arm_wrist_roll_joint
     - arm_wrist_pitch_joint
@@ -25,10 +26,19 @@ joint_state_controller:
 controller_list: []  # Not sure why this is required
 
 arm_cartesian_controller:
-  type: uwrt_cartesian_controller/CartesianController
+ type: velocity_controllers/CartesianController
+ root_name: world
+ tip_name: arm_claw_link
+ joints:
+    - arm_base_turntable_joint
+    - arm_shoulder_joint
+    - arm_shoulder_bicep_joint
+    - arm_elbow_joint
+    - arm_wrist_roll_joint
+    - arm_wrist_pitch_joint
 
 arm_trajectory_controller:
-  type: position_controllers/JointTrajectoryController
+  type: velocity_controllers/JointTrajectoryController
   joints:
     - arm_base_turntable_joint
     - arm_shoulder_joint
