--- a/uwrt_mars_rover_controllers/uwrt_open_loop_position_controller/package.xml
+++ b/uwrt_mars_rover_controllers/uwrt_open_loop_position_controller/package.xml
@@ -1,7 +1,7 @@
 <package format="2">
-  <name>position_controllers</name>
+  <name>uwrt_open_loop_position_controller</name>
   <version>0.17.0</version>
-  <description>position_controllers</description>
+  <description>uwrt_open_loop_position_controller</description>
 
   <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
   <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
@@ -21,7 +21,9 @@
   <depend>forward_command_controller</depend> 
   <depend>pluginlib</depend>
 
+  <depend>uwrt_mars_rover_msgs</depend>
+
   <export>
-    <controller_interface plugin="${prefix}/position_controllers_plugins.xml"/>
+    <controller_interface plugin="${prefix}/uwrt_open_loop_position_plugins.xml"/>
   </export>
 </package>
