removed all redundent files --working

--- a/uwrt_arm/uwrt_arm_rover_simulation/CMakeLists.txt
+++ b/uwrt_arm/uwrt_arm_rover_simulation/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(rover_simulation)
+project(uwrt_arm_rover_simulation)
 
 add_compile_options(-std=c++11)
 
