--- a/uwrt_arm/uwrt_arm_hw/package.xml
+++ b/uwrt_arm/uwrt_arm_hw/package.xml
@@ -25,4 +25,8 @@
   <depend>roscpp</depend>
   <depend>transmission_interface</depend>
   <depend>urdf</depend>
+
+  <export>
+    <controller_interface plugin="${prefix}/voltage_controllers_plugins.xml"/>
+  </export>
 </package>
