--- a/uwrt_rqt_plugins/rqt_gps/CMakeLists.txt
+++ b/uwrt_rqt_plugins/rqt_gps/CMakeLists.txt
@@ -30,7 +30,7 @@ endif()
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
 ## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
-catkin_python_setup()
+#catkin_python_setup()
 roslint_cpp()
 ################################################
 ## Declare ROS messages, services and actions ##
