fix plugin.xml misnaming

--- a/uwrt_rqt_plugins/rqt_gps/CMakeLists.txt
+++ b/uwrt_rqt_plugins/rqt_gps/CMakeLists.txt
@@ -218,7 +218,7 @@ install(DIRECTORY include/${PROJECT_NAME}/
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 install(FILES
-  plugin.xml
+  gpsplugin.xml
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
