--- a/uwrt_rqt_plugins/rqt_gps/package.xml
+++ b/uwrt_rqt_plugins/rqt_gps/package.xml
@@ -2,7 +2,7 @@
 <package format="2">
   <name>rqt_gps</name>
   <version>0.0.0</version>
-  <description>The rqt_gps package</description>
+  <description>Converts GPS coordinates between DMS and DD</description>
 
   <maintainer email="kirank.suren@gmail.com">kiran</maintainer>
 
@@ -52,6 +52,7 @@
   <build_depend>rqt_gui</build_depend>
   <build_depend>rqt_gui_cpp</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>genmsg</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>roslint</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
