--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,7 @@ jobs:
       - name: Install Qemu and Start Qemu Docker
         shell: bash
         run: |
+          sudo apt update
           sudo apt install qemu-user-static
           docker run --rm --privileged multiarch/qemu-user-static --reset --credential yes --persistent yes
 
