added prject name to pckg

--- a/uwrt_mars_rover_hw_bridge/CMakeLists.txt
+++ b/uwrt_mars_rover_hw_bridge/CMakeLists.txt
@@ -1,2 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
+project(uwrt_mars_rover_hw_bridge)
+find_package(catkin REQUIRED)
+
 add_subdirectory(library/uwrt_mars_rover_hw_bridge)
