implementing ci feedback

--- a/uwrt_mars_rover_hw_bridge/CMakeLists.txt
+++ b/uwrt_mars_rover_hw_bridge/CMakeLists.txt
@@ -1,5 +1,11 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(uwrt_mars_rover_hw_bridge)
 find_package(catkin REQUIRED)
+catkin_package(
+#  INCLUDE_DIRS include
+#  LIBRARIES ar_tracker
+#  CATKIN_DEPENDS other_catkin_pkg
+#  DEPENDS system_lib
+)
 
-add_subdirectory(library/uwrt_mars_rover_hw_bridge)
+add_subdirectory(library/${PROJECT_NAME})
