--- a/uwrt_mars_rover_hw_bridge/CMakeLists.txt
+++ b/uwrt_mars_rover_hw_bridge/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10.2)
 project(uwrt_mars_rover_hw_bridge)
 find_package(catkin REQUIRED)
 catkin_package(
-#  INCLUDE_DIRS include
+  INCLUDE_DIRS library/uwrt_mars_rover_hw_bridge/include
   LIBRARIES uwrt-mars-rover-hw-bridge
 #  CATKIN_DEPENDS other_catkin_pkg
 #  DEPENDS system_lib
