--- a/uwrt_mars_rover_neopixel/CMakeLists.txt
+++ b/uwrt_mars_rover_neopixel/CMakeLists.txt
@@ -26,6 +26,7 @@ catkin_package(
         CATKIN_DEPENDS
         roscpp
         uwrt_mars_rover_msgs
+        uwrt_mars_rover_hw_bridge
 )
 
 ###########
