implement gps array publishing

--- a/uwrt_rqt_plugins/rqt_gps/CMakeLists.txt
+++ b/uwrt_rqt_plugins/rqt_gps/CMakeLists.txt
@@ -61,6 +61,8 @@ add_message_files(
     FILES
     DDGPS.msg
     DMSGPS.msg
+    DDGPSarray.msg
+    DMSGPSarray.msg
 )
 
 ## Generate services in the 'srv' folder
