small refactor and move install targets to subdir

--- a/uwrt_mars_rover_hw_bridge/CMakeLists.txt
+++ b/uwrt_mars_rover_hw_bridge/CMakeLists.txt
@@ -2,18 +2,8 @@ cmake_minimum_required(VERSION 3.10.2)
 project(uwrt_mars_rover_hw_bridge)
 find_package(catkin REQUIRED)
 catkin_package(
-  INCLUDE_DIRS library/uwrt_mars_rover_hw_bridge/include
-  LIBRARIES uwrt-mars-rover-hw-bridge
-#  CATKIN_DEPENDS other_catkin_pkg
-#  DEPENDS system_lib
+        INCLUDE_DIRS lib/uwrt_mars_rover_hw_bridge/include
+        LIBRARIES uwrt-mars-rover-hw-bridge
 )
 
-add_subdirectory(library/${PROJECT_NAME})
-
-## Mark libraries for installation
-install(TARGETS
-        uwrt-mars-rover-hw-bridge
-        ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-        LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-        RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
-        )
+add_subdirectory(lib/${PROJECT_NAME})
