--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ qtcreator-*
 # Catkin custom files
 CATKIN_IGNORE
 
+# uwrt_mars_rover_hw_bridge shouldnt be added as a git submodule
+uwrt_mars_rover_hw_bridge/lib/uwrt_mars_rover_hw_bridge/
+
