--- a/uwrt_mars_rover_neopixel/CMakeLists.txt
+++ b/uwrt_mars_rover_neopixel/CMakeLists.txt
@@ -5,6 +5,7 @@ project(uwrt_mars_rover_neopixel)
 find_package(catkin REQUIRED COMPONENTS
         message_generation
         roscpp
+        uwrt_mars_rover_hw_bridge
         uwrt_mars_rover_msgs
         )
 
@@ -24,6 +25,7 @@ catkin_package(
         ${PROJECT_NAME}
         CATKIN_DEPENDS
         roscpp
+        uwrt_mars_rover_hw_bridge
         uwrt_mars_rover_msgs
 )
 
