--- a/uwrt_mars_rover_neopixel/package.xml
+++ b/uwrt_mars_rover_neopixel/package.xml
@@ -8,12 +8,14 @@
 
     <license>MIT</license>
 
+    <buildtool_depend>catkin</buildtool_depend>
 
     <build_depend>message_generation</build_depend>
-    <buildtool_depend>catkin</buildtool_depend>
-    <depend>uwrt_mars_rover_msgs</depend>
+
     <exec_depend>message_runtime</exec_depend>
 
     <depend>roscpp</depend>
+    <depend>uwrt_mars_rover_msgs</depend>
+    <depend>uwrt_mars_rover_hw_bridge</depend>
 
 </package>
