--- a/uwrt_autonomy/uwrt_state_machine/package.xml
+++ b/uwrt_autonomy/uwrt_state_machine/package.xml
@@ -2,12 +2,12 @@
 <package format="2">
   <name>uwrt_state_machine</name>
   <version>0.0.0</version>
-  <description>The uwrt_state_machine package</description>
+  <description>Handles high level state of rover</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="joshua@todo.todo">joshua</maintainer>
+  <maintainer email="joshua.kurien4@gmail.com">joshua</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -49,11 +49,9 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>behaviortree_cpp_v3</build_depend>
+  <depend>behaviortree_cpp</depend>
   <build_depend>roscpp</build_depend>
-  <build_export_depend>behaviortree_cpp_v3</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
-  <exec_depend>behaviortree_cpp_v3</exec_depend>
   <exec_depend>roscpp</exec_depend>
 
 
