--- a/uwrt_mars_rover_pid_tuning_api/CMakeLists.txt
+++ b/uwrt_mars_rover_pid_tuning_api/CMakeLists.txt
@@ -1,23 +1,15 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(uwrt_mars_rover_pid_api)
+project(uwrt_mars_rover_pid_tuning_api)
 
 ## Find catkin macros and libraries
 find_package(catkin REQUIRED COMPONENTS
         message_generation
         roscpp
-        uwrt_mars_rover_msgs
         uwrt_utils
+        uwrt_mars_rover_msgs
+        uwrt_mars_rover_hw_bridge
         )
 
-###################################
-## catkin specific configuration ##
-###################################
-## The catkin_package macro generates cmake config files for your package
-## Declare things to be passed to dependent projects
-## INCLUDE_DIRS: uncomment this if your package contains header files
-## LIBRARIES: libraries you create in this project that dependent projects also need
-## CATKIN_DEPENDS: catkin_packages dependent projects also need
-## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
         INCLUDE_DIRS
         include
@@ -25,25 +17,15 @@ catkin_package(
         ${PROJECT_NAME}
         CATKIN_DEPENDS
         roscpp
+        uwrt_utils
         uwrt_mars_rover_msgs
+        uwrt_mars_rover_hw_bridge
 )
 
-###########
-## Build ##
-###########
-
-## Specify additional locations of header files
-## Your package locations should be listed before other locations
 include_directories(
         include
         ${catkin_INCLUDE_DIRS}
 )
-
-## Declare a C++ library
-add_library(${PROJECT_NAME}
-        src/${PROJECT_NAME}.cpp
-        ../uwrt_utils/src/uwrt_can.cpp
-        )
 
 ## Declare a C++ executable
 add_executable(${PROJECT_NAME}_node src/${PROJECT_NAME}_node.cpp)
@@ -59,16 +41,6 @@ target_link_libraries(${PROJECT_NAME}_node
         ${PROJECT_NAME}
         ${catkin_LIBRARIES}
         )
-
-#############
-## Install ##
-#############
-
-## Mark executable scripts (Python etc.) for installation
-#install(PROGRAMS
-#        scripts/my_python_script
-#        DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-#        )
 
 ## Mark executables for installation
 install(TARGETS ${PROJECT_NAME}_node
