fixed some compile errors

--- a/uwrt_mars_rover_hw_bridge/CMakeLists.txt
+++ b/uwrt_mars_rover_hw_bridge/CMakeLists.txt
@@ -6,4 +6,4 @@ catkin_package(
         LIBRARIES uwrt-mars-rover-hw-bridge
 )
 
-add_subdirectory(lib/${PROJECT_NAME})
+# add_subdirectory(lib/${PROJECT_NAME})
