--- a/uwrt_mars_rover_hw_bridge/CMakeLists.txt
+++ b/uwrt_mars_rover_hw_bridge/CMakeLists.txt
@@ -5,4 +5,4 @@ catkin_package(
         LIBRARIES uwrt-mars-rover-hw-bridge
 )
 
-add_subdirectory(lib/${PROJECT_NAME})
+# add_subdirectory(lib/${PROJECT_NAME})
