--- a/uwrt_mars_rover_pid_tuning_api/CMakeLists.txt
+++ b/uwrt_mars_rover_pid_tuning_api/CMakeLists.txt
@@ -27,6 +27,11 @@ include_directories(
         ${catkin_INCLUDE_DIRS}
 )
 
+## Declare a C++ library
+add_library(${PROJECT_NAME}
+        src/${PROJECT_NAME}.cpp
+        )
+
 ## Declare a C++ executable
 add_executable(${PROJECT_NAME}_node src/${PROJECT_NAME}_node.cpp)
 
@@ -37,7 +42,7 @@ set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX ""
 add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(${PROJECT_NAME}_node
+target_link_libraries(${PROJECT_NAME}_node 
         ${PROJECT_NAME}
         ${catkin_LIBRARIES}
         )
