--- a/uwrt_mars_rover/package.xml
+++ b/uwrt_mars_rover/package.xml
@@ -11,8 +11,10 @@
 
     <buildtool_depend>catkin</buildtool_depend>
 
-    <exec_depend>uwrt_mars_rover_msgs</exec_depend>
     <exec_depend>uwrt_mars_rover_hw</exec_depend>
+    <exec_depend>uwrt_mars_rover_msgs</exec_depend>
+    <exec_depend>uwrt_mars_rover_neopixel</exec_depend>
+    <exec_depend>uwrt_utils</exec_depend>
 
     <export>
         <metapackage/>
