--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run ROS Industrial CI
-        uses: wmmc88/industrial_ci@update-catkin-lint
+        uses: ros-industrial/industrial_ci@master
         env: ${{matrix.env}}
 
   clang-format:
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run ROS Industrial CI
-        uses: wmmc88/industrial_ci@update-catkin-lint
+        uses: ros-industrial/industrial_ci@master
         env: ${{matrix.env}}
 
   clang-tidy:
@@ -46,7 +46,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run ROS Industrial CI
-        uses: wmmc88/industrial_ci@update-catkin-lint
+        uses: ros-industrial/industrial_ci@master
         env: ${{matrix.env}}
 
   catkin_lint:
@@ -61,7 +61,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run ROS Industrial CI
-        uses: wmmc88/industrial_ci@update-catkin-lint
+        uses: ros-industrial/industrial_ci@master
         env: ${{matrix.env}}
 
   arm64_build:
@@ -83,5 +83,5 @@ jobs:
           docker run --rm --privileged multiarch/qemu-user-static --reset --credential yes --persistent yes
 
       - name: Run ROS Industrial CI
-        uses: wmmc88/industrial_ci@update-catkin-lint
+        uses: ros-industrial/industrial_ci@master
         env: ${{matrix.env}}
