add daily cron jobs on master for github actions (#104)
* add daily cron jobs

* Update ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  schedule: # Trigger a job on master at midnight UTC every day
+    - cron: '0 0 * * *'
 
 jobs:
   amd64_build:
