--- a/xbox_controller/package.xml
+++ b/xbox_controller/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>joystick</name>
+  <name>xbox_controller</name>
   <version>0.0.0</version>
   <description>The joystick package</description>
   <maintainer email="todo@todo.todo">todo</maintainer>
