--- a/uwrt_mars_rover/package.xml
+++ b/uwrt_mars_rover/package.xml
@@ -12,11 +12,11 @@
     <buildtool_depend>catkin</buildtool_depend>
 
     <exec_depend>uwrt_autonomy</exec_depend>
-    <exec_depend>uwrt_mars_rover_hw</exec_depend>
+    <exec_depend>uwrt_mars_rover_drivetrain_hw</exec_depend>
     <exec_depend>uwrt_mars_rover_hw_bridge</exec_depend>
     <exec_depend>uwrt_mars_rover_msgs</exec_depend>
     <exec_depend>uwrt_mars_rover_neopixel</exec_depend>
-    <exec_depend>uwrt_utils</exec_depend>
+    <exec_depend>uwrt_mars_rover_utils</exec_depend>
 
     <export>
         <metapackage/>
