--- a/uwrt_mars_rover_msgs/CMakeLists.txt
+++ b/uwrt_mars_rover_msgs/CMakeLists.txt
@@ -93,7 +93,7 @@ generate_messages(
 ###################################
 ## catkin specific configuration ##
 ###################################
-## The catkin_package macro generates cmake cfg files for your package
+## The catkin_package macro generates cmake config files for your package
 ## Declare things to be passed to dependent projects
 ## INCLUDE_DIRS: uncomment this if your package contains header files
 ## LIBRARIES: libraries you create in this project that dependent projects also need
