--- a/uwrt_mars_rover_bringup/CMakeLists.txt
+++ b/uwrt_mars_rover_bringup/CMakeLists.txt
@@ -5,6 +5,6 @@ find_package(catkin REQUIRED)
 
 catkin_package()
 
-install(DIRECTORY cfg launch
+install(DIRECTORY launch
         DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
         )
