fix install build error

--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain/package.xml
@@ -12,6 +12,8 @@
 
     <buildtool_depend>catkin</buildtool_depend>
 
+    <exec_depend>uwrt_mars_rover_drivetrain_hw</exec_depend>
+
     <export>
         <metapackage/>
     </export>
