add missing dependencies

--- a/uwrt_mars_rover_science/uwrt_mars_rover_science/package.xml
+++ b/uwrt_mars_rover_science/uwrt_mars_rover_science/package.xml
@@ -10,6 +10,8 @@
 
     <buildtool_depend>catkin</buildtool_depend>
 
+    <exec_depend>uwrt_mars_rover_science_controllers</exec_depend>
+
     <export>
         <metapackage/>
     </export>
