--- a/uwrt_mars_rover_arm/uwrt_mars_rover_arm/package.xml
+++ b/uwrt_mars_rover_arm/uwrt_mars_rover_arm/package.xml
@@ -11,6 +11,8 @@
 
     <buildtool_depend>catkin</buildtool_depend>
 
+    <exec_depend>uwrt_mars_rover_arm_controllers</exec_depend>
+
     <export>
         <metapackage/>
     </export>
