--- a/uwrt_mars_rover_autonomy/uwrt_mars_rover_autonomy/package.xml
+++ b/uwrt_mars_rover_autonomy/uwrt_mars_rover_autonomy/package.xml
@@ -12,6 +12,7 @@
     <buildtool_depend>catkin</buildtool_depend>
 
     <exec_depend>uwrt_mars_rover_ar_tracker</exec_depend>
+    <exec_depend>uwrt_mars_rover_autonomy_controllers</exec_depend>
 
     <export>
         <metapackage/>
