--- a/uwrt_mars_rover_control/CMakeLists.txt
+++ b/uwrt_mars_rover_control/CMakeLists.txt
@@ -54,3 +54,7 @@ install(DIRECTORY include/${PROJECT_NAME}
         PATTERN "*.hpp"
         PATTERN ".svn" EXCLUDE
         )
+
+install(DIRECTORY cfg launch
+        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+        )
