--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/CMakeLists.txt
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(catkin REQUIRED COMPONENTS
         joint_limits_interface
         roscpp
         transmission_interface
+        uwrt_mars_rover_utils
         )
 
 catkin_package(
@@ -20,6 +21,7 @@ catkin_package(
         joint_limits_interface
         roscpp
         transmission_interface
+        uwrt_mars_rover_utils
 )
 
 include_directories(
