--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/package.xml
@@ -15,6 +15,7 @@
     <depend>hardware_interface</depend>
     <depend>joint_limits_interface</depend>
     <depend>transmission_interface</depend>
+    <depend>uwrt_mars_rover_utils</depend>
 
     <export>
         <hardware_interface plugin="${prefix}/uwrt_mars_rover_drivetrain_hw_plugin.xml"/>
