--- a/uwrt_mars_rover_autonomy/uwrt_mars_rover_ar_tracker/package.xml
+++ b/uwrt_mars_rover_autonomy/uwrt_mars_rover_ar_tracker/package.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
     <name>uwrt_mars_rover_ar_tracker</name>
     <version>0.0.0</version>
     <description>This enables tracking of an arbitrary number of AR tags given a pre-calibrated camera</description>
 
     <maintainer email="hmahdi@uwaterloo.ca">hmahdi</maintainer>
 
-    <license>TODO</license>
+    <license>MIT</license>
 
     <buildtool_depend>catkin</buildtool_depend>
     <exec_depend>ar_track_alvar</exec_depend>
