Updated data rate for vectornav and added imu/gps launch to rover bringup

--- a/uwrt_mars_rover_bringup/package.xml
+++ b/uwrt_mars_rover_bringup/package.xml
@@ -11,5 +11,6 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <exec_depend>uwrt_mars_rover_control</exec_depend>
+  <exec_depend>uwrt_mars_rover_localization</exec_depend>
 
 </package>
