--- a/uwrt_mars_rover_autonomy/uwrt_mars_rover_autonomy/package.xml
+++ b/uwrt_mars_rover_autonomy/uwrt_mars_rover_autonomy/package.xml
@@ -13,6 +13,7 @@
 
     <exec_depend>uwrt_mars_rover_ar_tracker</exec_depend>
     <exec_depend>uwrt_mars_rover_autonomy_controllers</exec_depend>
+    <exec_depend>uwrt_mars_rover_localization</exec_depend>
 
     <export>
         <metapackage/>
