--- a/uwrt_mars_rover_autonomy/uwrt_mars_rover_localization/cfg/vn300.yaml
+++ b/uwrt_mars_rover_autonomy/uwrt_mars_rover_localization/cfg/vn300.yaml
@@ -1,13 +1,13 @@
 # Defined in udev rules, change according to your system. Typically /dev/ttyUSB0
-serial_port: /dev/ttyUSB0
+serial_port: /dev/vectornav
 
 # Acceptable baud rates : 9600, 19200, 38400, 57600, 115200, 230400, 460800, 921600
 # Datasheet states 128000 works but from experiments it does not.
-serial_baud: 115200
+serial_baud: 230400
 
 # Acceptable data rates in Hz: 1, 2, 4, 5, 10, 20, 25, 40, 50, 100, 200
 # Baud rate must be able to handle the data rate
-async_output_rate: 40
+async_output_rate: 50
 
 # Device IMU Rate as set by the manufacturer (800Hz unless specified otherwise)
 # This value is used to set the serial data packet rate
