--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
 
     <name>uwrt_mars_rover_drivetrain</name>
     <version>0.0.0</version>
@@ -8,11 +8,15 @@
     <maintainer email="azumnanji@gmail.com">Azum Nanji</maintainer>
     <maintainer email="melvin.mc.wang@gmail.com">Melvin Wang</maintainer>
 
+    <author email="akeaveny@uwaterloo.ca">Aidan Keaveny</author>
+
     <license>MIT</license>
 
     <buildtool_depend>catkin</buildtool_depend>
 
+    <exec_depend>uwrt_mars_rover_drivetrain_controllers</exec_depend>
     <exec_depend>uwrt_mars_rover_drivetrain_hw</exec_depend>
+    <exec_depend>uwrt_mars_rover_drivetrain_msgs</exec_depend>
 
     <export>
         <metapackage/>
