--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_controllers/diff_drive_voltage_controller/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_controllers/diff_drive_voltage_controller/package.xml
@@ -16,6 +16,8 @@
     <depend>forward_command_controller</depend>
     <depend>pluginlib</depend>
     <depend>uwrt_mars_rover_drivetrain_msgs</depend>
+    <depend>uwrt_mars_rover_hw</depend>
+    <depend>uwrt_mars_rover_msgs</depend>
     <depend>uwrt_mars_rover_utils</depend>
 
     <export>
