--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/package.xml
@@ -16,6 +16,7 @@
     <depend>joint_limits_interface</depend>
     <depend>transmission_interface</depend>
 
+    <depend>uwrt_mars_rover_hw</depend>
     <depend>uwrt_mars_rover_utils</depend>
 
     <export>
