--- a/uwrt_mars_rover_msgs/package.xml
+++ b/uwrt_mars_rover_msgs/package.xml
@@ -3,8 +3,8 @@
     <name>uwrt_mars_rover_msgs</name>
     <version>0.0.0</version>
 
-    <!-- TODO: This package is to be deprecated in favor of msg packages specific to each subsystem-->
-    <description>Package containing all custom msgs used within the uwrt_mars_rover metapackage</description>
+    <description>Package containing all generic custom msgs that are designed to be used in more than one subsystem
+    </description>
 
     <maintainer email="melvin.mc.wang@gmail.com">Melvin Wang</maintainer>
 
