--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
     strategy:
       matrix:
         env:
-          - {ROS_DISTRO: melodic, ROS_REPO: main, CATKIN_LINT: pedantic, CATKIN_LINT_ARGS: "--file .catkin-lint", TARGET_WORKSPACE: "$TARGET_REPO_PATH metapackage_dependencies.rosinstall", UPSTREAM_WORKSPACE: "upstream_dependencies.rosinstall"}
+          - { ROS_DISTRO: melodic, ROS_REPO: main, CATKIN_LINT: pedantic, CATKIN_LINT_ARGS: "--config $TARGET_REPO_PATH/.catkin-lint", TARGET_WORKSPACE: "$TARGET_REPO_PATH metapackage_dependencies.rosinstall", UPSTREAM_WORKSPACE: "upstream_dependencies.rosinstall" }
 
     runs-on: ubuntu-18.04
     steps:
